= 2.0.0.58 =
* Sometimes distance value not showing on search page - FIXED
* Search with zip returns wrong address with OpenStreetMap - FIXED

= 2.0.0.57 =
* Image extension with uppercase not showing in backend - FIXED
* Recently viewed widget can break single page slider in some cases - FIXED
* Recently viewed widget setting added to load slider script if archive item has slider - ADDED

= 2.0.0.56 =
* Genesis theme not using h1 tags for archive page titles - FIXED
* GD SEO titles should still be used even if Yoast is installed - CHANGED
* Update jQuery FlexSlider to v2.0.2 - CHANGED
* BCC option missing for emails of the listing submitted for pending review - FIXED
* Frontend delete listing should refresh page on success - CHANGED
* Link is broken in phone badge - FIXED
* Business hours default offset should not use DST (Daylight Savings Time) in add listing - FIXED
* Category FA icon and color not cleared on save - FIXED
* Post Address widget alignment argument changed to mean float positioning - CHANGED
* Post meta and post address now have alignment and text-alignment arguments - ADDED
* Post images widget thumbnail size now forces that size instead of responsive - CHANGED
* Removed some leftover JS for removed chosen select - FIXED
* Map sticky option added now using font awesome icon and local-storage for settings - ADDED
* Google static map option added for single post map - ADDED
* Some text custom field types not applying validation pattern - FIXED
* Post images now uses image cover by default and gives option to change to x,y or none - CHANGED/ADDED
* Post images limit_show param added, this can be used to hide some images in gallery output but still load them via lightbox - ADDED
* Permalink issue with %post_id% rewrite tag - FIXED
* CPT + neighborhood urls shows 404 page not found - FIXED
* "Betheme" theme compatibility for gd pages - ADDED
* On some themes link of page 1 of GD Listing pagination not working - FIXED